docs: Add STC-S definition and link to SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -548,6 +548,7 @@
 \textbf{SMURF}  & Sub-Millimetre User Reduction Facility\\
 \textbf{S/N}    & Signal-to-Noise ratio\\
 \textbf{SQUID}  & Superconducting QUantum Interference Device\\
+\textbf{STC-S}  & Space-Time Coordinate Metadata String Implementation\\
 \textbf{SUN}    & Starlink User Note\\
 \textbf{TES}    & Transition Edge Sensor\\
 \textbf{WVM}    & Water Vapour radioMeter\\
@@ -3205,8 +3206,9 @@ pixel mask showing the clump boundaries.
 \end{verbatim}
 \end{myquote}
 
-The shape option allows \findclumps\ to create an STC-S description
-(polygonal or elliptical) for each clump. These are added as extra
+The shape option allows \findclumps\ to create an
+\htmladdnormallink{STC-S}{http://ivoa.net/documents/STC-S/index.html}
+description (polygonal or elliptical) for each clump. These are added as extra
 columns to the output catalogue.
 \\*\\*
 \begin{minipage}[t]{0.12\linewidth}
