docs: Reword paragrapgh in SC/21 on the science processing at CADC.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -4476,11 +4476,12 @@ an acceptable operating range.
 data, it does this by running fewer iterations and chunking the data
 more. This is a useful guide to observers who wish to check the
 quality of their data.
-\item The science pipeline is run the following day. Data from the
-previous night is processed using an optimal reduction routine, that
-includes the map-maker and a number of post-processing steps (outlined
-below). These data are transferred to CADC and available for download
-by project members the following day.
+\item The science pipeline is run at CADC. This is normally the next
+day once the data have transferred there.  This nightly processing
+uses an optimal reduction routine, that includes the map-maker and a
+number of post-processing steps (outlined below). Both the raw data
+and reduced products are available for download by project members the
+following day.
 \end{itemize}
 
 The manual for the SCUBA-2 pipeline can be found at \pipelinesun,
