--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -3460,7 +3460,7 @@ Stack the individual itermaps into a single cube.
 \end{minipage}
 \hspace{0.3cm}
 \begin{minipage}[c]{0.29\linewidth}
-The output map map\_itermaps can be opened with \gaia. The data used
+The output map \file{map\_itermaps} can be opened with \gaia. The data used
 in this example is the Galactic map reduced in
 \cref{Section}{sec:bright_ex}{\file{dimmconfig\_bright\_extended.lis}}. The
 Spectral plot window shows the value for a single pixel and the three
@@ -4538,7 +4538,7 @@ FCFs are derived from the map.
 This recipe is the same as \drrecipe{REDUCE\_SCAN}, but includes extra
 performance estimations determined by \drrecipe{SCUBA2\_CHECK\_RMS} (see
 \cref{Section}{sec:checkrms}{Getting the noise}). These extra metrics
-are written to a log file log.checkrms. The advantage of running
+are written to a log file \file{log.checkrms}. The advantage of running
 \drrecipe{SCUBA2\_CHECK\_RMS} in the pipeline rather than as a standalone
 \picard\ recipe is that is able to calculate results for co-added
 files.
@@ -4552,7 +4552,7 @@ This is the recipe for processing extended sources, with the
 \file{dimmconfig\_bright\_extended.lis} configuration file called by
 \makemap. Multiple observations are co-added and the output
 map is calibrated in units of mJy/arcsec$^2$. This recipe also
-performs a source finder routine; the results are written as a FITS
+performs a source-finder routine; the results are written as a FITS
 catalogue (with file extension \file{.FIT}) which can be read as a
 local catalogue into \gaia.
 \end{itemize}
@@ -4565,7 +4565,7 @@ This is the recipe for processing maps containing faint compact
 sources. This time the configuration file called by \makemap\
 is \file{dimmconfig\_blank\_field.lis}. The resulting map is further
 processed with a matched filter to give the first output map. Then the
-S/N is taken to enhance point sources, this
+S/N is taken to enhance point sources.  This
 S/N map is written out as a second output file. This
 recipe also performs a source finder routine; the results are written
 as a FITS catalogue (with file extension \file{.FIT}) which can be
@@ -4576,7 +4576,9 @@ read as a local catalogue into \gaia.
 \begin{itemize}
 \item Configuration file = \file{dimmconfig\_blank\_field.lis}
 
-This recipe uses a jack-knife method to remove residual low-spatial
+This recipe uses a
+\htmladdnormallink{jack-knife}{http://en.wikipedia.org/wiki/Jackknife_resampling}
+method to remove residual low-spatial
 frequency noise and create an optimal matched-filtered output map. The
 map-maker is run twice, first as a standard reduction using
 \file{dimmconfig\_blank\_field.lis}, and the second time with a fake
@@ -4606,8 +4608,8 @@ header \texttt{RECIPE} keyword in any of your raw files.  For
 example both of these options will return the same result:
 \begin{myquote}
 \begin{verbatim}
-% fitsval s8a20120725_00045_0003.sdf RECIPE
-% fitslist s8a20120725_00045_0003.sdf | grep RECIPE
+% fitsval s8a20120725_00045_0003 RECIPE
+% fitslist s8a20120725_00045_0003 | grep RECIPE
 \end{verbatim}
 \end{myquote}
 
@@ -4662,13 +4664,13 @@ Then run the pipeline calling the parameter file via the
 from and written to the right places. Many are set automatically when
 the pipeline is initialised but others must be set manually. Details
 of the optional variables are given in \pipelinesun\ but the three
-main ones are:
+main ones are listed below.
 \begin{itemize}\itemsep-0.1em
-\item \envvar{STARLINK\_DIR}: Location of your Starlink installation.
-\item \envvar{ORAC\_DATA\_IN}: The location where the data should be read from.
+\item \envvar{STARLINK\_DIR} -- Location of your Starlink installation.
+\item \envvar{ORAC\_DATA\_IN} -- The location where the data should be read from.
 If you are supplying a text file listing the raw data this should be the
 location of that file.
-\item \envvar{ORAC\_DATA\_OUT}: The location where the data products should be
+\item \envvar{ORAC\_DATA\_OUT} -- The location where the data products should be
 written. Also used as the location for a user-specified configuration file.\\
 \end{itemize}
 \end{minipage}
@@ -4745,7 +4747,7 @@ An important search option to be aware of is `Group Type', where your
 options are Simple, Night, Project and Public. Simple (which becomes
 `obs' on the result page) is an individual observation; night means
 the group file from the pipeline (these may or may not include more
-than one observation; the `Group Members' value will tell you), the
+than one observation; the `Group Members' value will tell you); and the
 project option is generated if an entire project has been run through
 the pipeline and identical sources across the project are co-added
 into master group files.
@@ -4876,7 +4878,7 @@ patterns}---in particular
 you will want to plot \texttt{az} and \texttt{el} (the absolute
 azimuth and elevation), and also \texttt{daz} and \texttt{del} (the
 azimuth and elevation offsets from the map centre). This signal is
-usually azimuth-correlated due to magnetic field pickup. It only shows
+usually azimuth-correlated due to magnetic-field pickup. It only shows
 up in azimuth, because the instrument is on a Nasmyth platform and
 therefore does not move in elevation.
 
@@ -4951,7 +4953,7 @@ The maps produced from this are then analysed using tailor-made
 
 A map reduced by the map-maker has units of pW. To calibrate the data
 into units of janskys (Jy), a set of bright, point-source objects with
-well known flux densities are observed regularly to provide a flux
+well-known flux densities are observed regularly to provide a flux
 conversion factor (FCF). The data (in pW) can be multiplied by this FCF
 to obtain a calibrated map. The FCF can also be used to assess the
 relative performance of the instrument from night to night. The noise
@@ -4976,7 +4978,7 @@ the fluxes can be added to the parameter file with the source name
 and \param{FLUX\_850.MYSRC~=~0.005} (where the values are in Jy),
 for example.}
 
-\item {Three alternative FCF values are calculated, two of which are
+\item {Three different FCF values are calculated, two of which are
 described below.}
 \end{enumerate}
 
@@ -5072,8 +5074,8 @@ defaults are listed in \file{\$SMURF\_DIR/smurf\_extinction.def}.
     nefd\_nep & NEFD derived from nep\_av and scaled elapsed time (mJy sqrt(sec))\\
     rms\_map & RMS noise in map, obtained from median of error array (mJy/beam)\\
     nefd\_map & NEFD derived from combination of variance and exposure time images (mJy sqrt(sec))\\
-    rms\_itc & RMS noise estimated by SCUBA-2 integration time calculator (ITC) (mJy/beam) *\\
-    nefd\_itc & NEFD derived from rms\_itc and scaled elapsed time (mJy sqrt(sec)) *\\
+    rms\_itc & RMS noise estimated by SCUBA-2 integration time calculator (ITC) (mJy/beam) \\
+    nefd\_itc & NEFD derived from rms\_itc and scaled elapsed time (mJy sqrt(sec)) \\
     itc\_obstype & observation type used by the ITC to derived RMS\\
     rms\_ratio & ratio of rms\_map to rms\_itc\\
     El & mean elevation in degrees\\
@@ -5162,9 +5164,9 @@ the \param{PSF\_MATCHFILTER} recipe parameter).
 \subsection{\xlabel{fcfsred}FCFs by reduction date}
 \label{app:fcfs}
 
-Ongoing development of the SCUBA-2 analysis has resulted in on-going
+Ongoing development of the SCUBA-2 analysis has resulted in ongoing
 changes to the tau relationship and the FCFs. Depending on when your
-data was reduced will need to apply different calibration values.
+data were reduced you will need to apply different calibration values.
 \\
 \begin{table}[h!]
 \begin{center}
@@ -5210,7 +5212,7 @@ relation was applied by using the \Kappa\ command \hislist.
 \vspace{-2mm}
 \begin{myquote}
 \begin{verbatim}
-%  hislist file.sdf | grep EXT.TAURELATION
+%  hislist file | grep EXT.TAURELATION
       , EXT.TAURELATION.450=(26.0,-0.012),
       EXT.TAURELATION.850=(4.6,-0.0043), EXT.TAUSRC=auto, FAKESCALE=1,
 \end{verbatim}
