docs: Add three more items to the Glossary of SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -539,11 +539,15 @@
 \textbf{FITS}   & Flexible Image Transport System\\
 \textbf{FWHM}   & Full-Width at Half-Maximum\\
 \textbf{GAIA}   & Graphical Astronomy and Image Analysis Tool\\
+\textbf{ITC}    & Integration Time Calculator\\
 \textbf{JCMT}   & James Clerk Maxwell Telescope\\
 \textbf{MSB}    & Minimum Schedulable Block\\
 \textbf{NDF}    & Extensible N-Dimensional Data Format\\
+\textbf{NEP}    & Noise Equivalent Power\\
 \textbf{NEFD}   & Noise Equivalent Flux Density\\
 \textbf{PSF}    & Point Spread Function\\
+\textbf{PWV}    & Precipitable Water Vapour\\
+\textbf{RMS}    & Root Mean Square\\
 \textbf{SCUBA-2}& Submillimetre Common User Bolometer Array-2\\
 \textbf{SMURF}  & Sub-Millimetre User Reduction Facility\\
 \textbf{S/N}    & Signal-to-Noise ratio\\
